--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,11 +20,12 @@ bitsy_SOURCES =	\
 bitsy_LDADD	= $(top_builddir)/lib/libbitc.la \
 		$(top_builddir)/lib/libbitcnet.la \
 		$(top_builddir)/lib/libbitcwallet.la \
-		@GMP_LIBS@ @ARGP_LIBS@ @JANSSON_LIBS@
+		@GMP_LIBS@ @ARGP_LIBS@
 
 blkscan_LDADD	= $(top_builddir)/lib/libbitc.la \
 		@GMP_LIBS@ @ARGP_LIBS@
 blkstats_LDADD	= $(top_builddir)/lib/libbitc.la \
 		@GMP_LIBS@ @ARGP_LIBS@
 rawtx_LDADD	= $(top_builddir)/lib/libbitc.la \
-		@GMP_LIBS@ @ARGP_LIBS@ @JANSSON_LIBS@
+		$(top_builddir)/lib/libbitcwallet.la \
+		@GMP_LIBS@ @ARGP_LIBS@
