--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -12,30 +12,32 @@ AM_CPPFLAGS = \
 EXTRA_DIST = \
 	base58_encode_decode.json	\
 	base58_keys_valid.json		\
-	random.data			\
-	blk0.json  blk120383.json  tx3e0dc3da.json \
-	blk0.ser  blk120383.ser  tx3e0dc3da.ser \
-	blks10.ser \
+	blk0.json blk0.ser blks10.ser \
+	blk120383.json blk120383.ser \
 	hdr193000.ser tn_hdr35141.ser \
-	tn_blk35133.ser wallet-basics.json \
-	script_tests.json tx_valid.json tx_invalid.json
+	random.data	script_tests.json \
+	tn_blk35133.ser tx3e0dc3da.json tx3e0dc3da.ser \
+	tx_invalid.json tx_valid.json \
+	wallet-basics.json
 
 noinst_LTLIBRARIES = libtest.la
 
-libtest_la_SOURCES = libtest.h libtest.c chisq.c randtest.c
+libtest_la_SOURCES = libtest.h libtest.c randtest.c chisq.c
 
-check_PROGRAMS = clist cstr coredefs hex hdkeys hashtab base58 fileio util \
-	crypto keystore keyset bloom mbr misc net message parr prng \
-	script-parse tx block blockfile blkdb script tx-valid wallet \
-	wallet-basics chain-verf hash ctaes aes-util
+check_PROGRAMS = aes-util base58 blkdb block blockfile bloom \
+    chain-verf clist coredefs crypto cstr ctaes fileio hash hashtab \
+    hdkeys hex keystore json keyset mbr misc net message parr prng \
+	script script-parse tx tx-valid wallet wallet-basics util
 
 TESTS = $(check_PROGRAMS)
 
 COMMON_LDADD = libtest.la \
 	$(top_builddir)/lib/libbitc.la \
+	$(top_builddir)/lib/libbitcwallet.la \
 	$(top_builddir)/external/secp256k1/libsecp256k1.la \
-	@GMP_LIBS@ @JANSSON_LIBS@ @MATH_LIBS@
+	@GMP_LIBS@ @MATH_LIBS@
 
+aes_util_LDADD		= $(COMMON_LDADD)
 base58_LDADD		= $(COMMON_LDADD)
 blkdb_LDADD		= $(COMMON_LDADD)
 block_LDADD		= $(COMMON_LDADD)
@@ -43,20 +45,20 @@ blockfile_LDADD		= $(COMMON_LDADD)
 bloom_LDADD		= $(COMMON_LDADD)
 chain_verf_LDADD	= $(COMMON_LDADD)
 clist_LDADD		= $(COMMON_LDADD)
-cstr_LDADD		= $(COMMON_LDADD)
 coredefs_LDADD		= $(COMMON_LDADD)
-ctaes_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
-aes_util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
 crypto_LDADD		= $(COMMON_LDADD)
+cstr_LDADD		= $(COMMON_LDADD)
+ctaes_LDADD		= $(COMMON_LDADD)
 fileio_LDADD		= $(COMMON_LDADD)
 hash_LDADD		= $(COMMON_LDADD)
-hex_LDADD		= $(COMMON_LDADD)
 hashtab_LDADD		= $(COMMON_LDADD)
 hdkeys_LDADD		= $(COMMON_LDADD)
+hex_LDADD		= $(COMMON_LDADD)
+json_LDADD		= $(COMMON_LDADD)
 keyset_LDADD		= $(COMMON_LDADD)
 keystore_LDADD		= $(COMMON_LDADD)
-mbr_LDADD		= $(COMMON_LDADD)
 message_LDADD		= $(COMMON_LDADD)
+mbr_LDADD		= $(COMMON_LDADD)
 misc_LDADD		= $(COMMON_LDADD)
 net_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcnet.la
 parr_LDADD		= $(COMMON_LDADD)
@@ -66,5 +68,5 @@ script_parse_LDADD	= $(COMMON_LDADD)
 tx_LDADD		= $(COMMON_LDADD)
 tx_valid_LDADD		= $(COMMON_LDADD)
 util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcnet.la
-wallet_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
+wallet_LDADD		= $(COMMON_LDADD)
 wallet_basics_LDADD	= $(COMMON_LDADD)
