--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -11,7 +11,7 @@ AM_CPPFLAGS = \
 
 EXTRA_DIST = \
 	base58_encode_decode.json	\
-	base58_keys_valid.json		\
+	base58_keys_invalid.json base58_keys_valid.json		\
 	blk0.json blk0.ser blks10.ser \
 	blk120383.json blk120383.ser \
 	hdr193000.ser tn_hdr35141.ser \
