travis: Added fakeroot to apt_packages list fakeroot is no longer included in latest default Ubuntu image on Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ addons:
       - libltdl-dev
       - dpkg-dev
       - debhelper
+      - fakeroot
   coverity_scan:
     project:
       name: libbitc/libbitc
