--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)/include \
-		-I$(top_srcdir)/external/secp256k1/include
+		-I$(top_srcdir)/external/secp256k1/include \
+		-I$(top_srcdir)/external/cJSON
 
 bin_PROGRAMS	= brd bitsy blkscan blkstats rawtx
 
