--- a/external/Makefile.am
+++ b/external/Makefile.am
@@ -1,7 +1,10 @@
 SUBDIRS = secp256k1 libbitc.github.io
 AUTOMAKE_OPTIONS = subdir-objects
 
-noinst_LTLIBRARIES = cJSON/libcjson.la libev/libev.la
+noinst_LTLIBRARIES = 	\
+			cJSON/libcjson.la \
+			libev/libev.la \
+			lmdb/libraries/liblmdb/liblmdb.la
 
 cJSON_libcjson_la_CFLAGS = -fPIC
 cJSON_libcjson_ladir = cJSON
@@ -16,7 +19,20 @@ libev_libev_la_HEADERS =	\
 libev_libev_la_SOURCES =	\
 			libev/ev.c \
 			libev/event.c
+
+lmdb_libraries_liblmdb_liblmdb_la_CFLAGS = -W -Wall -Wno-unused-parameter   \
+			-Wno-missing-field-initializers -Wno-format-extra-args \
+			-Wno-missing-braces -Wbad-function-cast -pthread
+lmdb_libraries_liblmdb_liblmdb_ladir = lmdb/libraries/liblmdb
+lmdb_libraries_liblmdb_liblmdb_la_HEADERS =	\
+			lmdb/libraries/liblmdb/lmdb.h	\
+			lmdb/libraries/liblmdb/midl.h
+lmdb_libraries_liblmdb_liblmdb_la_SOURCES = \
+			lmdb/libraries/liblmdb/mdb.c	\
+			lmdb/libraries/liblmdb/midl.c
+
 EXTRA_DIST =	\
+			cJSON/LICENSE \
 			libev/LICENSE \
 			libev/libev.m4 \
 			libev/ev_vars.h \
@@ -26,4 +42,5 @@ EXTRA_DIST =	\
 			libev/ev_poll.c \
 			libev/ev_kqueue.c \
 			libev/ev_port.c \
-			libev/ev_win32.c
+			libev/ev_win32.c \
+			lmdb/libraries/liblmdb/LICENSE
