--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,6 @@ matrix:
 cache:
   apt: true
 
-services:
-  - docker
-
 addons:
   apt_packages:
       - libgmp-dev
@@ -58,6 +55,7 @@ addons:
       - dpkg-dev
       - debhelper
       - fakeroot
+      - rpm
   coverity_scan:
     project:
       name: libbitc/libbitc
@@ -75,6 +73,9 @@ notifications:
     on_start: never
   slack: libbitc:LzNZosd4L6ZkORMznw0mwrq7
 
+before_install:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+
 install:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install argp-standalone; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ] && [ "$ENABLE_COVERAGE" = "yes" ]; then brew install lcov; fi
@@ -87,7 +88,6 @@ before_script:
 script:
   - LIBBITC_CONFIG="--enable-coverage=$ENABLE_COVERAGE --enable-valgrind=$ENABLE_VALGRIND"
   - LIBBITC_CONFIG_ALL="--cache-file=config.cache"
-  - if [ "$MAKETARGET" = "pkg-rpm" ]; then docker run -t -i -v $TRAVIS_BUILD_DIR:/libbitc centos:7 /bin/bash -c "yum -y update; yum -y install autoconf automake libtool make rpm-build gmp-devel; cd /libbitc; ./autogen.sh; ./configure $LIBBITC_CONFIG_ALL; make $MAKEJOBS $MAKETARGET"; exit $? ; fi
   - ./configure $LIBBITC_CONFIG_ALL $LIBBITC_CONFIG || ( cat config.log && false)
   - make -s $MAKEJOBS $MAKETARGET || ( echo "Build failure. Verbose build follows." && make V=1 $MAKETARGET; false )
 
