net: Moved network protocol versioning into include/net/version.h
Signed-off-by: libbitc <libbitc@users.noreply.github.com>

--- a/include/bitc/Makefile.am
+++ b/include/bitc/Makefile.am
@@ -47,7 +47,8 @@ libbitcnet_la_HEADERS =	\
 		net/fakepoll.h	\
 		net/net.h	\
 		net/netbase.h	\
-		net/peerman.h
+		net/peerman.h	\
+		net/version.h
 
 libbitcwallet_ladir = $(includedir)/bitc/wallet
 
