--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,7 @@ dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 AC_INIT(libbitc, 0.3.0,
-  [libbitc <libbitc@users.noreply.github.com>],,
+  [libbitc <libbitc@protonmail.com>],,
   [https://github.com/libbitc/libbitc])
 AC_PREREQ(2.60)
 LT_INIT
